--- a/style.css
+++ b/style.css
@@ -113,42 +113,56 @@ section {
 /* Mobile Nav */
 @media (max-width: 768px) {
   .hamburger {
-    display: block;
+    display: none;
+  font-size: 1.8rem;
+  cursor: pointer;
+  color: #03a9f4;
+  z-index: 2000;
   }
 
   .nav-links {
+    display: flex;
+    flex-direction: column;
     position: fixed;
     top: 0;
     right: -100%;
+    background-color: #121212;
+    width: 80%;
     height: 100vh;
-    width: 250px;
-    background: rgba(18, 18, 18, 0.97);
-    flex-direction: column;
-    padding: 80px 20px;
+    padding: 60px 20px;
     gap: 25px;
     transition: right 0.4s ease;
-    box-shadow: -4px 0 15px rgba(0, 0, 0, 0.7);
     z-index: 1500;
+    box-shadow: -2px 0 10px rgba(0, 0, 0, 0.7);
   }
 
+  @media (max-width: 1024px) {
+  .hamburger {
+    display: block;
+    position: absolute;
+    right: 20px;
+    top: 14px;
+  }
+
+  .top-nav ul {
+    display: none;
+  }
+    
   .nav-links.show {
     right: 0;
   }
 
   .nav-links li a {
+   font-size: 1.3rem;
     color: #03a9f4;
-    font-size: 1.2rem;
   }
 
   .close-btn {
-    display: block;
-    color: #03a9f4;
-    font-size: 1.6rem;
+    font-size: 2rem;
     font-weight: bold;
-    cursor: pointer;
+    color: #fff;
     align-self: flex-end;
-    margin-bottom: 20px;
-    margin-left: auto;
+    cursor: pointer;
   }
 }
 
