--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ section {
   }
 
   .close-btn {
+    display: block;
     font-size: 2rem;
     font-weight: bold;
     color: #90caf9;
@@ -516,4 +517,9 @@ section {
 
 .nav-links.show {
   right: 0 !important;
+}
+
+.hamburger,
+.close-btn {
+  display: none; /* hide by default (desktop) */
 }
